--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-admin-template",
+  "name": "admin-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
+    "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "firebase": "^8.8.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
